# recsys-to

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
architecture/: decisions_log.md  operational_scenarios.md  solution_architecture.md  tool_selection.md
configs/: baseline_config.json  tree_config.json
infra/terraform/: .terraform.lock.hcl  iam.tf  main.tf  outputs.tf  s3.tf  sagemaker.tf  variables.tf
src/: api.py  data_quality.py  evaluation.py  features.py  models.py  tree_model.py
tests/: test_tree_model.py
